--- a/exercise-2/Program-11.html
+++ b/exercise-2/Program-11.html
@@ -30,19 +30,20 @@
 
 
     let deepak   = new User(1,"deepak","jain","abc1234","d@gmail.com","Male",25,true);
-    let Pavan    = new User(2,"Pavan","Kumar","abc1234","p@gmail.com","Male",24,false);
-    let Tejas    = new User(3,"Tejas","jain","abc1234","t@gmail.com","Male",23,true);
-    let Anirudh  = new User(4,"Anirudh","jain","abc1234","a@gmail.com","Male",26,false);
-    let Nagendra = new User(5,"Nagendra","jain","abc1234","n@gmail.com","Male",22,true);
+    let Pushpa   = new User(2,"Pushpa","KS","abc1234","p@gmail.com","Female",23,true);
+    let Pavan    = new User(3,"Pavan","Kumar","abc1234","p@gmail.com","Male",24,false);
+    let Tejas    = new User(4,"Tejas","jain","abc1234","t@gmail.com","Male",23,true);
+    let Anirudh  = new User(5,"Anirudh","jain","abc1234","a@gmail.com","Male",26,false);
+    
 
     deepak.displayAge();
     deepak.displayAccountCreated();
 
-    Pavan.displayAge();
-    Pavan.displayAccountCreated();
+    Pushpa.displayAge();
+    Pushpa.displayAccountCreated();
 
-    Tejas.displayAge();
-    Tejas.displayAccountCreated();
+    Pavan.displayAge();
+    Pavan.displayAccountCreated();   
 
     Anirudh.displayAge();
     Anirudh.displayAccountCreated();
