--- a/exercise-2/Program-11.html
+++ b/exercise-2/Program-11.html
@@ -45,11 +45,12 @@
     Pavan.displayAge();
     Pavan.displayAccountCreated();   
 
+    Tejas.displayAge();
+    Tejas.displayAccountCreated();
+   
     Anirudh.displayAge();
     Anirudh.displayAccountCreated();
 
-    Nagendra.displayAge();
-    Nagendra.displayAccountCreated();
 
     </script>
 </body>
